RESOLVED FIXED62042
Fix IntRect::expand(const IntSize& size)
https://bugs.webkit.org/show_bug.cgi?id=62042
Summary Fix IntRect::expand(const IntSize& size)
Emil A Eklund
Reported 2011-06-03 12:53:49 PDT
The IntSize version of IntRect::expand currently moves the rect instead of resizing it. This is clearly incorrect. It was introduced about a month ago in r86377 and is not used anywhere yet.
Attachments
Patch (1.30 KB, patch)
2011-06-03 12:57 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2011-06-03 12:57:07 PDT
Andreas Kling
Comment 2 2011-06-03 13:05:47 PDT
Comment on attachment 95949 [details] Patch o_O
Emil A Eklund
Comment 3 2011-06-03 13:07:43 PDT
Thanks for the quick review Andreas!
Andreas Kling
Comment 4 2011-06-03 13:12:09 PDT
(In reply to comment #3) > Thanks for the quick review Andreas! No problem! Now go use the function so we don't have to remove it. :)
Emil A Eklund
Comment 5 2011-06-03 13:14:08 PDT
> No problem! Now go use the function so we don't have to remove it. :) I have a couple of patches for that coming up :)
WebKit Commit Bot
Comment 6 2011-06-04 00:02:51 PDT
Comment on attachment 95949 [details] Patch Clearing flags on attachment: 95949 Committed r88096: <http://trac.webkit.org/changeset/88096>
WebKit Commit Bot
Comment 7 2011-06-04 00:02:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.