2011-06-04  Emil A Eklund  <eae@chromium.org>

Reviewed by Andreas Kling.

        Fix IntRect::expand(const IntSize& size)
        https://bugs.webkit.org/show_bug.cgi?id=62042

        No new tests.

        * platform/graphics/IntRect.h:
        (WebCore::IntRect::expand):
        Fix IntRect::expand to expand the size rather than move the location.
        Currently unused.

Canonical link: https://commits.webkit.org/77548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88096 268f45cc-cd09-0410-ab3c-d52691b4dbfc